--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: prepare java
-      - uses: actions/setup-java@v2
+        uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
           java-version: '17'
       - name: install clojure
-      - uses: DeLaGuardo/setup-clojure@3.7
+        uses: DeLaGuardo/setup-clojure@3.7
         with:
           lein: latest
 
