--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -31,7 +31,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           github_token: ${{secrets.GITHUB_TOKEN}}
-          repo: "https://github.com/HumbleUI/JWM/"
+          repo: HumbleUI/HumbleUI
           workflow: build-deploy.yml
           workflow_conclusion: success
           name: jars
