Trying to remove all filters

--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -33,8 +33,9 @@ jobs:
           github_token: ${{secrets.GITHUB_TOKEN}}
           repo: HumbleUI/HumbleUI
           workflow: build-deploy.yml
-          workflow_conclusion: success
+          # workflow_conclusion: success
           name: jars
+          # run_id: 1718998078
 
       - name: install jwm to maven repo
         run: mvn install:install-file -Dfile=jars/jwm-b3fecb126a.jar -DpomFile=jars/maven/META-INF/maven/io.github.humbleui/jwm/pom.xml
