--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -10,7 +10,11 @@ jobs:
   build-deb:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [
+            ubuntu-latest,
+            macos-latest,
+            # windows-latest
+        ]
 
     runs-on: ${{ matrix.os }}
     steps:
