--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -41,16 +41,21 @@ jobs:
           name: jars
           run_id: 1718998078
 
-      - name: recursively print info in current directory
+      - name: recursively print info in current directory macos + linux
         if: ${{ matrix.os != 'windows-latest' }}
         run: ls && find . -maxdepth 2 -type d -exec ls -ld "{}" \;
 
-      - name: recursively print info in current directory
+      - name: recursively print info in current directory windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: tree /F
 
-      - name: install jwm to maven repo
+      - name: install jwm to maven repo macos + li
+        if: ${{ matrix.os != 'windows-latest' }}
         run: mvn install:install-file -Dfile=jwm-b3fecb126a.jar -DpomFile=maven/META-INF/maven/io.github.humbleui/jwm/pom.xml
+
+      - name: install jwm to maven repo windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: mvn install:install-file -Dfile=jwm-b3fecb126a.jar -DpomFile=maven\META-INF\maven\io.github.humbleui\jwm\pom.xml
 
       - name: build uberjar
         run: lein uberjar
