Try adding explicit tag name

--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -21,6 +21,10 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
+      - name: set latest tag as output
+        id: tag_step
+        run: echo ::set-output name=release_tag::${GITHUB_REF#refs/*/}
+
       - name: prepare java
         uses: actions/setup-java@v2
         with:
@@ -84,6 +88,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.tag_step.outputs.release_tag }}
           files: |
             "Fruit Economy-1.0.deb"
 
@@ -96,6 +101,7 @@ jobs:
         if: ${{ matrix.os == 'macos-latest' }}
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.tag_step.outputs.release_tag }}
           files: |
             "Fruit Economy-1.0.dmg"
           #upload_url: ${{ github.event.release.upload_url }}
