--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -1,11 +1,14 @@
 name: Build Release Artifacts
 on:
-  release:
-    types: [created]
-  workflow_run:
-    workflows: [Release]
-    types:
-      - completed
+  push:
+    tags:
+      - v*
+#  release:
+#    types: [created]
+#  workflow_run:
+#    workflows: [Release]
+#    types:
+#      - completed
 jobs:
   build-deb:
     strategy:
@@ -90,7 +93,7 @@ jobs:
         with:
           tag_name: ${{ steps.tag_step.outputs.release_tag }}
           files: |
-            "Fruit Economy-1.0.deb"
+            Fruit Economy-1.0.deb
 
           #upload_url: ${{ github.event.release.upload_url }}
           #asset_path: fruit-economy-${{ github.ref_name }}-amd64.deb
@@ -101,9 +104,8 @@ jobs:
         if: ${{ matrix.os == 'macos-latest' }}
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ steps.tag_step.outputs.release_tag }}
           files: |
-            "Fruit Economy-1.0.dmg"
+            Fruit Economy-1.0.dmg
           #upload_url: ${{ github.event.release.upload_url }}
           #asset_path: fruit-economy-${{ github.ref_name }}.dmg
           #asset_name: fruit-economy-${{ github.ref_name }}.dmg
