--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -63,6 +63,9 @@ jobs:
       - name: build uberjar
         run: lein uberjar
 
+      - name: create version number for app
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
+
       - name: build package on linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: jpackage @jpackage/common @jpackage/linux
