--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -66,17 +66,22 @@ jobs:
       - name: create version number for app
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
+      - name: set conditional app-version arg
+        run: [[ ${RELEASE_VERSION%.*.*} == 0 ]] \
+          && echo "VERSION_ARG=" >> $GITHUB_ENV \
+          || echo "VERSION_ARG=--app-version ${RELEASE_VERSION}" >> $GITHUB_ENV
+
       - name: build package on linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: jpackage @jpackage/common @jpackage/linux --app-version $RELEASE_VERSION
+        run: jpackage @jpackage/common @jpackage/linux $VERSION_ARG
 
       - name: build package on macos
         if: ${{ matrix.os == 'macos-latest' }}
-        run: jpackage @jpackage/common @jpackage/mac --app-version $RELEASE_VERSION
+        run: jpackage @jpackage/common @jpackage/mac $VERSION_ARG
 
       - name: build package on windows
         if: ${{ matrix.os == 'windows-latest' }}
-        run: jpackage @jpackage/common @jpackage/windows --app-version $RELEASE_VERSION
+        run: jpackage @jpackage/common @jpackage/windows $VERSION_ARG
 
       - name: recursively print info again in current directory macos + linux
         if: ${{ matrix.os != 'windows-latest' }}
