--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -67,7 +67,8 @@ jobs:
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
       - name: set conditional app-version arg
-        run: [[ ${RELEASE_VERSION%.*.*} == 0 ]] \
+        run: |
+          [[ ${RELEASE_VERSION%.*.*} == 0 ]] \
           && echo "VERSION_ARG=" >> $GITHUB_ENV \
           || echo "VERSION_ARG=--app-version ${RELEASE_VERSION}" >> $GITHUB_ENV
 
