--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: build package on windows
         if: ${{ matrix.os == 'windows-latest' }}
-        run: jpackage @jpackage/common @jpackage/windows $VERSION_ARG
+        run: copy .\maven\META-INF\maven\io.github.humbleui\jwm\pom.xml pom.xml && jpackage @jpackage/common @jpackage/windows $VERSION_ARG
 
       - name: recursively print info again in current directory macos + linux
         if: ${{ matrix.os != 'windows-latest' }}
