--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -16,7 +16,7 @@ jobs:
         os: [
             ubuntu-latest,
             macos-latest,
-            # windows-latest
+            windows-latest
         ]
 
     runs-on: ${{ matrix.os }}
