--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -60,11 +60,11 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
           copy .\maven\META-INF\maven\io.github.humbleui\jwm\pom.xml pom.xml `
-          && $env:GROUP_ID=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.groupId}' --non-recursive exec:exec) && `
-          && $env:ARTIFACT_ID=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.artifactId}' --non-recursive exec:exec) && `
-          && $env:VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec) && `
-          && $env:PACKAGING=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.packaging}' --non-recursive exec:exec) && `          
-          && mvn install:install-file -Dfile=.\jwm-b3fecb126a.jar -DgroupId=$env:GROUP_ID -DartifactId=$env:ARTIFACT_ID -Dversion=$env:VERSION -Dpackaging=$env:PACKAGING
+          ; $env:GROUP_ID=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.groupId}' --non-recursive exec:exec) `
+          ; $env:ARTIFACT_ID=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.artifactId}' --non-recursive exec:exec) `
+          ; $env:VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec) `
+          ; $env:PACKAGING=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.packaging}' --non-recursive exec:exec) `          
+          ; mvn install:install-file -Dfile=.\jwm-b3fecb126a.jar -DgroupId=$env:GROUP_ID -DartifactId=$env:ARTIFACT_ID -Dversion=$env:VERSION -Dpackaging=$env:PACKAGING
 
       - name: build uberjar
         run: lein uberjar
