Now I'm getting a permissions error, let's try bash...

--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -58,13 +58,8 @@ jobs:
 
       - name: install jwm to maven repo windows
         if: ${{ matrix.os == 'windows-latest' }}
-        run: |
-          copy .\maven\META-INF\maven\io.github.humbleui\jwm\pom.xml pom.xml `
-          ; $env:GROUP_ID=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression="project.groupId" -q -DforceStdout) `
-          ; $env:ARTIFACT_ID=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression="project.artifactId" -q -DforceStdout) `
-          ; $env:VERSION=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression="project.version" -q -DforceStdout) `
-          ; $env:PACKAGING=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression="project.packaging" -q -DforceStdout) `
-          ; & mvn install:install-file -Dfile=.\jwm-b3fecb126a.jar -DgroupId="$env:GROUP_ID" -DartifactId="$env:ARTIFACT_ID" -Dversion="$env:VERSION" -Dpackaging="$env:PACKAGING"
+        shell: bash
+        run: mvn install:install-file -Dfile=jwm-b3fecb126a.jar -DpomFile=maven/META-INF/maven/io.github.humbleui/jwm/pom.xml
 
       - name: build uberjar
         run: lein uberjar
