Try getting deps first then adding jar to local then uberjar

--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -61,8 +61,15 @@ jobs:
         shell: bash
         run: mvn install:install-file -Dfile=jwm-b3fecb126a.jar -DpomFile=maven/META-INF/maven/io.github.humbleui/jwm/pom.xml
 
-      - name: build uberjar
+      - name: get deps
+        run: lein deps
+
+      - name: install humbleui to maven repo windows
+        if: ${{ matrix.os == 'windows-latest' }}
         shell: bash
+        run: mvn install:install-file -Dfile=~/.gitlibs\libs\humbleui\humbleui\fc60fd319ba905dada9a6917a1a1632413c132d5\target\humbleui-0.1.0.jar
+
+      - name: build uberjar
         run: lein uberjar
 
       - name: create version number for app
