This is what you get when you spend time in powershell land...

--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -65,8 +65,8 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         shell: bash
         run:  |
-          curl https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > lein \
-          chmod a+x lein \
+          curl https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > lein && \
+          chmod a+x lein && \
           lein uberjar
 
       - name: install humbleui to maven repo windows
