--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -66,8 +66,11 @@ jobs:
         shell: bash
         run:  |
           curl https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein > lein && \
-          chmod a+x lein && \
-          lein uberjar
+          chmod a+x lein
+
+      - name: recursively print info in current directory windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: tree /F
 
       - name: install humbleui to maven repo windows
         if: ${{ matrix.os == 'windows-latest' }}
