--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -63,6 +63,7 @@ jobs:
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
       - name: set conditional app-version arg
+        shell: bash
         run: |
           [[ ${RELEASE_VERSION%.*.*} == 0 ]] \
           && echo "VERSION_ARG=" >> $GITHUB_ENV \
