--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -63,23 +63,27 @@ jobs:
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
 
       - name: set conditional app-version arg
+        id: app_version
         shell: bash
         run: |
           [[ ${RELEASE_VERSION%.*.*} == 0 ]] \
-          && echo "VERSION_ARG=" >> $GITHUB_ENV \
-          || echo "VERSION_ARG=--app-version ${RELEASE_VERSION}" >> $GITHUB_ENV
+          && echo ::set-output app_version_arg= \
+          || echo ::set-output app_version_arg=$(echo --app-version ${RELEASE_VERSION})
+
+      - name: did we record app-version?
+        run: echo ${{ steps.app_version.outputs.app_version_arg }}
 
       - name: build package on linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: jpackage @jpackage/common @jpackage/linux $VERSION_ARG
+        run: jpackage @jpackage/common @jpackage/linux ${{ steps.app_version.outputs.app_version_arg }}
 
       - name: build package on macos
         if: ${{ matrix.os == 'macos-latest' }}
-        run: jpackage @jpackage/common @jpackage/mac $VERSION_ARG
+        run: jpackage @jpackage/common @jpackage/mac ${{ steps.app_version.outputs.app_version_arg }}
 
       - name: build package on windows
         if: ${{ matrix.os == 'windows-latest' }}
-        run: jpackage @jpackage/common @jpackage/windows $VERSION_ARG
+        run: jpackage @jpackage/common @jpackage/windows ${{ steps.app_version.outputs.app_version_arg }}
 
       - name: recursively print info again in current directory macos + linux
         if: ${{ matrix.os != 'windows-latest' }}
