--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -101,9 +101,9 @@ jobs:
         if: ${{ matrix.os == 'macos-latest' }}
         run: mv Fruit\ Economy-1.0.dmg Fruit\ Economy-${{ env.RELEASE_VERSION }}.dmg
 
-      #- name: rename file on windows
-      #  if: ${{ matrix.os == 'windows-latest' }}
-      #  run: mv fruit-economy_1.0-1_amd64.deb fruit-economy_${{ env.RELEASE_VERSION }}_amd64.deb
+      - name: rename file on windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: mv Fruit\ Economy-1.0.exe Fruit\ Economy-${{ env.RELEASE_VERSION }}.exe
 
       - name: release artifacts on linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
