--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -132,7 +132,9 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: fruit-economy-${{ github.ref_name }}.exe
-          asset_name: fruit-economy-${{ github.ref_name }}.exe
-          asset_content_type: application/vnd.microsoft.portable-executable
+          files: |
+            Fruit Economy-${{ env.RELEASE_VERSION }}.exe
+          #upload_url: ${{ github.event.release.upload_url }}
+          #asset_path: fruit-economy-${{ github.ref_name }}.exe
+          #asset_name: fruit-economy-${{ github.ref_name }}.exe
+          #asset_content_type: application/vnd.microsoft.portable-executable
