--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -96,6 +96,22 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         run: tree /F
 
+      - name: codesign executable on macos
+        if: ${{ matrix.os == 'macos-latest' }}
+        env:
+          MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
+          MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
+          MACOS_IDENTITY: ${{ secrets.MACOS_IDENTITY }}
+        run: |
+          export PASSWORD=$(echo $RANDOM | md5sum | head -c 20)
+          echo $MACOS_CERTIFICATE | base64 --decode > certificate.p12
+          security create-keychain -p $PASSWORD build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p $PASSWORD build.keychain
+          security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $PASSWORD build.keychain
+          /usr/bin/codesign --force -s $MACOS_IDENTITY Fruit\ Economy-1.0.dmg -v
+
       - name: rename file on linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: mv fruit-economy_1.0-1_amd64.deb fruit-economy_${{ env.RELEASE_VERSION }}_amd64.deb
