--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -105,6 +105,7 @@ jobs:
         run: mv Fruit\ Economy-1.0.dmg Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg
 
       - name: rename file on windows
+        shell: bash
         if: ${{ matrix.os == 'windows-latest' }}
         run: mv Fruit\ Economy/ Fruit_Economy/
 
