--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -127,17 +127,28 @@ jobs:
           NOTARY_USERNAME: ${{ secrets.NOTARY_USERNAME }}
           NOTARY_PASSWORD: ${{ secrets.NOTARY_PASSWORD }}
         run: |
+          echo "Generate Local Password"
           export PASSWORD=$(echo $RANDOM | git hash-object --stdin | head -c 20)
+          echo "Load Certificate to Local System"
           echo $MACOS_CERTIFICATE | base64 --decode > certificate.p12
+          echo "Create New Keychain"
           security create-keychain -p $PASSWORD build.keychain
+          echo "Assign Keychain as System Default"
           security default-keychain -s build.keychain
+          echo "Unlock Keychain"
           security unlock-keychain -p $PASSWORD build.keychain
+          echo "Load Local System Certificate to Keychain"
           security import certificate.p12 -k build.keychain -P $MACOS_CERTIFICATE_PWD -T /usr/bin/codesign
+          echo "Set Permissions on Keychain Certificate"
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $PASSWORD build.keychain
+          echo "Codesign DMG"
           /usr/bin/codesign --force --timestamp --deep -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg -v
+          echo "Send App to be Notarised"
           NOTARY_RESPONSE=$(/usr/bin/xcrun altool -t osx -f Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg --primary-bundle-id $PRIMARY_BUNDLE_ID --notarize-app --username $NOTARY_USERNAME --password $NOTARY_PASSWORD)
           echo $NOTARY_RESPONSE
+          echo "Extract Notary Token from Response"
           NOTARY_TOKEN=$(echo $NOTARY_RESPONSE | egrep '[0-9a-f]{8}-([0-9a-f]{4}-){3}[0-9a-f]{8}' -o)
+          echo "Check Notarised Progress"
           ./build/check-notarization-progress
 
       - name: release artifacts on linux
