--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -154,8 +154,9 @@ jobs:
           echo $NOTARY_RESPONSE
           echo "Extract Notary Token from Response"
           NOTARY_TOKEN=$(echo $NOTARY_RESPONSE | egrep '[0-9a-f]{8}-([0-9a-f]{4}-){3}[0-9a-f]{8}' -o)
+          echo $NOTARY_TOKEN
           echo "Check Notarised Progress"
-          ./build/check-notarization-progress
+          NOTARY_TOKEN=$NOTARY_TOKEN ./build/check-notarization-progress
 
       - name: release artifacts on linux
         if: ${{ matrix.os == 'ubuntu-latest' }}
