--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -15,8 +15,8 @@ jobs:
       matrix:
         os: [
             # ubuntu-latest,
-            # macos-latest,
-            windows-latest
+            macos-latest,
+            # windows-latest
         ]
 
     runs-on: ${{ matrix.os }}
