--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -145,12 +145,8 @@ jobs:
           hdiutil attach Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg
           echo "Copy App to Local Workspace"
           cp -r /Volumes/Fruit\ Economy/Fruit\ Economy.app .
-          echo "Codesign App Executable"
-          /usr/bin/codesign --force --timestamp -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app/Contents/MacOS/Fruit\ Economy -v
-          echo "Codesign App Native Libs"
-          /usr/bin/codesign --force --timestamp -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app/Contents/runtime/Contents/MacOS/libjli.dylib -v
-          echo "Send App to be Notarised"
-          NOTARY_RESPONSE=$(/usr/bin/xcrun altool -t osx -f Fruit\ Economy.app --primary-bundle-id $PRIMARY_BUNDLE_ID --notarize-app --username $NOTARY_USERNAME --password $NOTARY_PASSWORD)
+          echo "Codesign App"
+          /usr/bin/codesign --force --timestamp --deep -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app -v
           echo $NOTARY_RESPONSE
           echo "Extract Notary Token from Response"
           NOTARY_TOKEN=$(echo $NOTARY_RESPONSE | egrep '[0-9a-f]{8}-([0-9a-f]{4}-){3}[0-9a-f]{8,12}' -o)
